--- a/index.html
+++ b/index.html
@@ -292,6 +292,17 @@
                         <a href="https://github.com/fraancescoo/ImageScaler" target="_blank" class="link"><img loading="lazy" src="assets/icons/github.png" class="logo"> <span>Github</span></a>
                     </div>
                 </li>
+                <li>
+                    <div class="osprojectcard">
+                        <h1>CFX-IP</h1>
+                        <a class="projectrole">Developer</a>
+                        <br>
+                        <a class="lang python">Python</a>
+                        <br>
+                        <br>
+                        <a href="https://github.com/fraancescoo/CFX-IP" target="_blank" class="link"><img loading="lazy" src="assets/icons/github.png" class="logo"> <span>Github</span></a>
+                    </div>
+                </li>
             </ul>
         </div>
     </body>
