--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         <meta name="description" content="Francesco Piantone (Fraancescoo)">
         <meta name="keywords" content="Francesco, Piantone, Fraancescoo, Fraanceescoo, Coding, Java, Developer">
         <meta name="author" content="Francesco Piantone (Fraancescoo)">
+        <meta property="og:title" content="Site Title" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://francescopiantone.com" />
+        <meta property="og:image" content="https://francescopiantone.com/assets/images/favicon.png" />
+        <meta property="og:description" content="Portfolio di Francesco Piantone" />
+        <meta name="theme-color" content="#0000FF">
     </head>
     <body>
         <div class="page page1">
