--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <meta name="description" content="Francesco Piantone (Fraancescoo)">
         <meta name="keywords" content="Francesco, Piantone, Fraancescoo, Fraanceescoo, Coding, Java, Developer">
         <meta name="author" content="Francesco Piantone (Fraancescoo)">
-        <meta property="og:title" content="Site Title" />
+        <meta property="og:title" content="Francesco Piantone (Fraancescoo)" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://francescopiantone.com" />
         <meta property="og:image" content="https://francescopiantone.com/assets/images/favicon.png" />
