--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
             <a href="https://buymeacoffee.com/fraancescoo" class="button buymeacoffee" target="_blank"><img src="assets/icons/buymeacoffee.png" loading="lazy"> Buy Me a Coffee</a>
             
-            <a class="button paypal"><img src="assets/icons/paypal.png" loading="lazy"> Paypal</a>
+            <a href="https://paypal.me/FrancescoPiantone" class="button paypal"><img src="assets/icons/paypal.png" loading="lazy"> Paypal</a>
             <!-- <a class="button revolut"><img src="assets/icons/revolut.png" loading="lazy"> Revolut</a> -->
         </div>
 
