--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
                         <br>
                         <a class="projectrole">Owner & Developer</a>
                         <br>
-                        <!-- <br> -->
-                        <!-- <a href="[ESCE TRA POCO]" target="_blank" class="link"><img loading="lazy" src="assets/icons/discord.png" class="logo"> <span>Discord</span></a> -->
+                        <br>
+                        <a href="https://dsc.gg/bytedevs" target="_blank" class="link"><img loading="lazy" src="assets/icons/discord.png" class="logo"> <span>Discord</span></a>
                         <br>
                         <a href="https://t.me/bytedevs" target="_blank" class="link"><img loading="lazy" src="assets/icons/telegram.png" class="logo"> <span>Telegram Channel</span></a>
                     </div>
