--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <a href="mailto:fraancescoo.commercial@gmail.com" target="_blank" class="btn primarybtn"><i class="fa-solid fa-phone"></i> <lang name="contact-me" /></a>
             <a href="#socialpage" class="btn secondarybtn"><i class="fa fa-mobile"></i> Social</a>
 
-            <img src="assets/images/githubpropic.png" alt="Github Profile Picture" reveal-side="left" reveal-mobile="down" reveal-only-on-load>
+            <img style="width: 250px; height: auto" src="assets/images/youtubepropic.png" alt="Image" reveal-side="left" reveal-mobile="down" reveal-only-on-load>
         </div>
 
         <a class="scrolldownbtn" data-scrolltodown-btn><i class="fa-solid fa-arrow-down"></i></a>
